--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <title>hello</title>
 
 
-<div id="a">test a</div>
+<div id="a"></div>
 
-<div id="b"></div>
+<div id="b">test b</div>
 
 <div id="c"></div>
 
