--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <title>hello</title>
 
 
-<div id="a"></div>
+<div id="a">test a</div>
 
 <div id="b"></div>
 
-<div id="c">test c</div>
+<div id="c"></div>
 
 </html>
